package gameLaby.laby;

public class Monstre extends Position {
    
}
